--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@prisma/client": "^6.3.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.474.0"
   },
@@ -26,7 +22,6 @@
     "@types/react-dom": "^19.0.3",
     "tailwindcss": "^4.0.3",
     "postcss": "^8.5.1",
-    "prisma": "^6.3.0",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6"
   }
