--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "next": "14.2.29",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "@prisma/client": "^6.3.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.474.0"
   },
@@ -22,6 +28,7 @@
     "@types/react-dom": "^18.3.1",
     "tailwindcss": "^4.0.3",
     "postcss": "^8.5.1",
+    "prisma": "^6.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.29"
   }
