--- a/package.json
+++ b/package.json
@@ -14,22 +14,23 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "next": "14.2.29",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@prisma/client": "^6.3.0",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.474.0"
+    "lucide-react": "^0.474.0",
+    "next": "14.2.29",
+    "next-pwa": "^5.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.7.3",
     "@types/node": "^22.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.29",
     "postcss": "^8.5.1",
     "prisma": "^6.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.29"
+    "tailwindcss": "^4.0.3",
+    "typescript": "^5.7.3"
   }
 }
