--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.2.29",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "^22.13.0",
