--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Environment Variables
+﻿# Environment Variables
 
 # Database
 DATABASE_URL="postgresql://user:password@host/database?sslmode=require"
@@ -15,3 +15,8 @@ HASHVAULT_WALLET_ADDRESS="your_monero_wallet_address_here"
 # Telegram Bot (optional)
 # Get token from @BotFather in Telegram
 TELEGRAM_BOT_TOKEN="your_bot_token_here"
+# MEXC Spot Order Monitoring (optional)
+# API key and secret for private spot endpoints
+MEXC_API_KEY="your_mexc_api_key_here"
+MEXC_API_SECRET="your_mexc_api_secret_here"
+
